outputs_20260330-114723-56118cc4/codegen/production/build_logs/compiler_stderr.log
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\src\gtm_tom_3_phase_inverter_pwm.c:12:10: fatal error: Gtm/Pwm/IfxGtm_Pwm.h: No such file or directory
   12 | #include <Gtm/Pwm/IfxGtm_Pwm.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:8:
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:94:5: error: unknown type name 'IfxGtm_Pwm_callBack'; did you mean 'IfxGtm_Pwm_State'?
   94 |     IfxGtm_Pwm_callBack periodEvent;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_State
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:95:5: error: unknown type name 'IfxGtm_Pwm_callBack'; did you mean 'IfxGtm_Pwm_State'?
   95 |     IfxGtm_Pwm_callBack dutyEvent;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_State
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:100:5: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_State'?
  100 |     IfxGtm_Pwm_ToutMap *pin;
      |     ^~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_State
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:101:5: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_State'?
  101 |     IfxGtm_Pwm_ToutMap *complementaryPin;
      |     ^~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_State
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:146:5: error: unknown type name 'IfxGtm_Pwm_callBack'; did you mean 'IfxGtm_Pwm_State'?
  146 |     IfxGtm_Pwm_callBack         periodEvent;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_State
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:147:5: error: unknown type name 'IfxGtm_Pwm_callBack'; did you mean 'IfxGtm_Pwm_State'?
  147 |     IfxGtm_Pwm_callBack         dutyEvent;
      |     ^~~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_State
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:166:5: error: unknown type name 'Ifx_GTM_ATOM'
  166 |     Ifx_GTM_ATOM *ATOM;
      |     ^~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:167:5: error: unknown type name 'Ifx_GTM_TOM'; did you mean 'Ifx_GTM'?
  167 |     Ifx_GTM_TOM  *TOM;
      |     ^~~~~~~~~~~
      |     Ifx_GTM
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:168:5: error: unknown type name 'Ifx_GTM_CDTM'
  168 |     Ifx_GTM_CDTM *CDTM;
      |     ^~~~~~~~~~~~
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:223:5: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  223 |     IfxGtm_Pwm_ToutMap *outputPin;
      |     ^~~~~~~~~~~~~~~~~~
      |     IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:245:8: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  245 | extern IfxGtm_Pwm_ToutMap IfxGtm_TOM1_1_TOUT11_P00_2_OUT;
      |        ^~~~~~~~~~~~~~~~~~
      |        IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:246:8: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  246 | extern IfxGtm_Pwm_ToutMap IfxGtm_TOM1_2_TOUT12_P00_3_OUT;
      |        ^~~~~~~~~~~~~~~~~~
      |        IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:247:8: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  247 | extern IfxGtm_Pwm_ToutMap IfxGtm_TOM1_3_TOUT13_P00_4_OUT;
      |        ^~~~~~~~~~~~~~~~~~
      |        IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\include/IfxGtm_Pwm.h:248:8: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  248 | extern IfxGtm_Pwm_ToutMap IfxGtm_TOM1_5_TOUT11_P00_2_OUT;
      |        ^~~~~~~~~~~~~~~~~~
      |        IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:224:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  224 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_1_TOUT11_P00_2_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:225:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  225 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_2_TOUT12_P00_3_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:226:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  226 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_3_TOUT13_P00_4_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Pwm_Config
C:\Users\extpedj\AppData\Local\Temp\tdd_build_4pdum979\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:227:1: error: unknown type name 'IfxGtm_Pwm_ToutMap'; did you mean 'IfxGtm_Pwm_Config'?
  227 | IfxGtm_Pwm_ToutMap IfxGtm_TOM1_5_TOUT11_P00_2_OUT = {0};
      | ^~~~~~~~~~~~~~~~~~
      | IfxGtm_Pwm_Config
